2010-10-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (box_range_fiddling) src/graphics.c (plot_boxes):
	Catch a couple of corner cases of "plot ... with boxes".
	Bug #3075938

2010-10-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics): A smart (or maybe that's dumb) compiler may 
	optimize out our tests for step size less that the machine precision.
	Try to forestall this by marking the steps as (float)(volatile double).
	Bug #3085168

2010-10-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c: Reduce the size of the pm3d surface quadrangle structure
	by removing a redundant copy of the vertex coordinates. Add a pointer to
	track the current plot's line color.
	Bug #2997853

2010-10-11  James R. Van Zandt  <jrvz@comcast.net>

        * src/specfun.c src/specfun.h src/eval.c docs/gnuplot.doc:  Adding
        support for the exponential integral E_n(x) as gnuplot function expint(n,x).

2010-10-10  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* src/stdfn.c (not_a_number): Bit-pattern definition of NaN for MINGW

2010-10-09  Ethan A Merritt  <merritt@u.washington.edu>

	* term/lua.trm (LUA_options): Null-terminate the "set term lua ..."
	command string at the first semicolon before passing it to lua.

	* src/fit.c src/fit.h src/set.c docs/gnuplot.doc:
	New option "set fit quiet" prevents fit information sent to the log 
	file from being echoed also to stderr.
	Bug #2355210

2010-10-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Protect against the case that the x11 colormap is not
	partitioned identically to the palette.

2010-10-06  Marco Cammarata  <marcocamma@users.sourceforge.net>

	* docs/psdoc/ps_symbols.gpi: "set angle radian"

2010-10-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c src/pm3d.c src/pm3d.h set.c show.c docs/gnuplot.doc:
	Simplify the syntax for "set pm3d hidden3d". A linestyle is no longer